# medical-ai-assistant

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: appointment.py  doctor.py  livekit_token.py  patient.py  router.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py
backend/app/database/: connection.py  create_tables.py  session.py
backend/app/enums/: appointment_status.py  doctor_specialization.py  gender.py
backend/app/livekit/: agent.py  providers.py
backend/app/models/: __init__.py  appointment.py  doctor.py  patient.py
backend/app/schemas/: appointment.py  appointment_request.py  doctor.py  patient.py
backend/app/services/: appointment_service.py  doctor_service.py  patient_service.py
backend/app/utils/: parser.py
backend/app/voice/: service.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: index.css
frontend/src/components/VoiceAssistant/: LanguageSelector.tsx  ListeningAnimation.tsx  ProviderSelector.tsx  VoiceControls.tsx
frontend/src/hooks/: useVoice.ts
frontend/src/pages/: Home.tsx
frontend/src/services/: livekit.ts
