[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "livekit-agents[silero,turn-detector]~=1.0",
    "livekit-api>=1.1.1",
    "livekit-plugins-cerebras>=1.6.4",
    "livekit-plugins-google>=1.6.4",
    "livekit-plugins-groq>=1.6.4",
    "livekit-plugins-sarvam>=1.6.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sarvamai>=0.1.28",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
